# mm

./: .gitignore  .gitmodules  1  CONTRIBUTING.md  Dockerfile  Jenkinsfile  Makefile  Makefile.old.mk  README  README.md  REVIEWING.md  anju_schedule_goto.c  anju_schedule_ifs.c  asdf.c  asm_replacements.txt  asmdiff.sh  baserom.mm.us.rev1.z64:Zone.Identifier  boot_spec.txt  checksum-compressed.md5  checksum.md5  checksum_compressed.md5  checksum_uncompressed.md5  codescript.txt  ctx.c  diff.py  diff.sh  diff_settings.py  disasm.py  dmadata.py  dmadata_script.txt  dmadata_table.py  drawtextnes.c  elf2rom.py  extract_assets.py  extract_rom.py  extract_textures.py  file_setup.sh  files.py  first_diff.py  format.py  (+34 more)
.github/: pull_request_template.md
docs/: BUILDING_DOCKER.md  BUILDING_MACOS.md  CONTRIBUTING.md  REVIEWING.md  STYLE.md  git_tips.md  libu64.md  schedule_scripting_language.md  tools.md  useful_conversions.md
include/: CIC6105.h  alignment.h  all_types.h  assert.h  attributes.h  audiomgr.h  audiothread_cmd.h  bgm.h  bstring.h  buffers.h  build.h  color.h  command_macros_base.h  constants.h  controller.h  convert.h  debug.h  dmadata.h  face_change.h  fault.h  fault_internal.h  fixed_point.h  flg_set.h  functions.h  functions_overlay.h  gDPLoadTextureBlock_Runtime.inc.c  gamealloc.h  gfx.h  gfx_setupdl.h  (+172 more)
tools/decomp-permuter/src/net/controller/: .gitignore  Cargo.toml  README.md  config_example.toml
tools/decomp-permuter/src/net/controller/src/: client.rs  db.rs  flimsy_semaphore.rs  main.rs  port.rs  save.rs  server.rs  setup.rs  stats.rs  util.rs  vouch.rs
(+20608 files in other folders)
